--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "js-dev-b2b-final-capstone-simon-says",
   "version": "1.0.0",
   "description": "js-dev-b2b-final-capstone qualified challenge",
-  "dependencies": {},
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "jest": "^29.0.0",
+    "jest-puppeteer": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.6.1",
-    "puppeteer": "^19.0.0",
-    "jest-puppeteer": "^6.0.0"
+    "puppeteer": "^19.0.0"
   },
   "scripts": {
     "start": "parcel --port=3000 index.html",
+    "deploy": "gh-pages -d dist",
     "test": "run-p -r start test:run",
     "test:run": "jest --env=puppeteer",
     "test:1": "run-p -r start test:run:1",
